2022-05-11  James Larus  <larus@icdhcp-1-244.epfl.ch>

	* spim/spim.cpp (main) [https://sourceforge.net/p/spimsimulator/bugs/104/]:
	spim did not properly parse command line arguments to assembly program.

2022-03-15  James Larus  <larus@Jim-Macbook-Max.local>

	* QtSpim/main.cpp [https://sourceforge.net/p/spimsimulator/bugs/103/]:
	Fix incorrect LOCALE on Linux.

2022-02-20  James Larus  <larus@Jim-Macbook-Max.local>

	* spim/spim.cpp
	[https://sourceforge.net/p/spimsimulator/bugs/102/:
	Helpstring for -assemble option to spim was incorrect.

2021-12-06  Larus  <larus@Jim-Macbook-Air>

	* Release: 9.1.23

2021-12-05  larus  <larus@ubuntu>

	* QtSpim.pro
	Work around pointless error message from gnutils mv.

	* bin/release-debian
	Update paths

2021-12-05  U-DESKTOP-OQE31KH\Larus  <Larus@DESKTOP-OQE31KH>

	* bin/release-win:
	Fix paths for QT 5.

	* QtSpim.pro:
	Fixed mismatched parser file names and eliminated cached copies of parser and scanner.
	Use Linux sh to move files, not cmd.

2021-12-04  Larus  <larus@Jim-Macbook-Air>

	* QtSpim/macinfo.plist
	[https://sourceforge.net/p/spimsimulator/bugs/87/]:
	Fix version number for MacOS Finder.

	* README, README.rtf
	Note that QtSpim does not compile with QT version 6.

	* QtSpim_Mac.pkgproj, release-osx:
	Fix paths for Qt5.

2021-10-19  Larus  <larus@Jim-Macbook-Air>

	* data.cpp, inst.cpp, run.h:
	Eliminate compiler warnings.

2021-10-11  Larus  <larus@Jim-Macbook-Air>

	* data.cpp, inst.cpp, parser.y [https://sourceforge.net/p/spimsimulator/bugs/100/]:
	Fix .align directive

2021-09-20  Larus  <larus@Jim-Macbook-Air>

	* Update test case.

2020-12-19  Larus  <larus@Jim-Macbook-Air>

	* CPU/parser.y Tests/tt.bare.s [https://sourceforge.net/p/spimsimulator/bugs/99/]:
	Missing nops in code generated for pseduo instructions when
	running with delayed branches.

2020-12-05  Larus  <larus@Jim-Macbook-Air>
