@@ -1,3 +1,9 @@
+2022-11-08  James Larus  <larus@Jim-Macbook-Max.local>
+
+	* mem.c (bad_mem_write)
+	[https://sourceforge.net/p/spimsimulator/patches/7/]:
+	null memory ref when writing to text location not containing instruction.
+
 2022-05-11  James Larus  <larus@icdhcp-1-244.epfl.ch>
 
 	* spim/spim.cpp (main) [https://sourceforge.net/p/spimsimulator/bugs/104/]:
